reworking HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
 
-        <link rel="stylesheet" href="./style.css" type="text/css" />
-        <title>Building a Wireframe</title>
+    <link rel="stylesheet" href="./style.css" type="text/css" />
+    <title>Building a Wireframe</title>
 
-    </head>
-    <body>
+</head>
+<body>
+    <div class="container">
         <header class="howhigh">
             <h5>header</h5>
         </header>
@@ -37,6 +38,6 @@
         <footer class="howhigh">
             <h5>footer</h5>
         </footer>
-
-    </body>
+    </div>
+</body>
 </html> 
